# quant-system

./: .coverage  .coveragerc  .dockerignore  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  DOCKERFILE  GOVERNANCE.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  docker-compose.yml  pymarkdown.json  pyproject.toml  ruff.toml  sonar-project.properties  tailwind.config.js
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  container-scan.yml  daily-backtest.yml  factor-promotion.yml  gitleaks.yml  gitleaks.yml.disable  iac-scan.yml  model-deployment.yml  release.yml  staged-deploy.yml
.sonarlint/: connectedMode.json
.tmp-debug/results/: results.sqlite
ai_agents/: README.md  pyproject.toml
ai_agents/src/ai_agents/alpha_researcher/: __init__.py
ai_agents/src/ai_agents/approvals/: __init__.py
ai_agents/src/ai_agents/code_reviewer/: __init__.py
ai_agents/src/ai_agents/guardrails/: __init__.py
ai_agents/src/ai_agents/memory/: __init__.py
ai_agents/src/ai_agents/permissions/: __init__.py
ai_agents/src/ai_agents/risk_monitor/: __init__.py
ai_agents/src/ai_agents/runtime/: __init__.py
alembic/versions/: 0001_unified_cli_schema.py
alpha_research/: README.md  pyproject.toml
alpha_research/src/alpha_research/factor_library/: __init__.py
alpha_research/src/alpha_research/ml_models/: __init__.py
alpha_research/src/alpha_research/ml_models/providers/: __init__.py
alpha_research/src/alpha_research/ml_models/registry/: __init__.py
alpha_research/src/alpha_research/ml_models/rl/: __init__.py
alpha_research/src/alpha_research/ml_models/validation/: __init__.py
alpha_research/src/alpha_research/promotion/: __init__.py
backtest_engine/: README.md  pyproject.toml
config/: example.integration.yaml  example.yaml
config/baseline/: bonds_global_baseline.yaml  bonds_high_yield_baseline.yaml  bonds_us_treasuries_baseline.yaml  commodities_baseline.yaml  crypto_baseline.yaml  forex_intraday_finnhub_baseline.yaml  forex_intraday_twelvedata_baseline.yaml  forex_majors_baseline.yaml  indices_majors_baseline.yaml  traderfox_research_baseline.yaml
config/collections/: bonds_corporate.yaml  bonds_global.yaml  bonds_high_yield.yaml  bonds_majors.yaml  bonds_municipal.yaml  bonds_tips.yaml  bonds_us_treasuries.yaml  commodities.yaml  (+29 more)
data_platform/: README.md  pyproject.toml
data_platform/src/data_platform/connectors/: __init__.py
data_platform/src/data_platform/feature_store/: __init__.py
data_platform/src/data_platform/indexing/: __init__.py
data_platform/src/data_platform/pipelines/: __init__.py
data_platform/src/data_platform/quality/: __init__.py
data_platform/src/data_platform/storage/: __init__.py
docker/: Dockerfile
docs/: ROADMAP.md  cli-guide.md  development.md  docker.md  features.md  pgadmin-and-performance.md  reliability-metadata-clarification.md
scripts/: build_tailwind.sh  check_data_ranges.py  compare_direct_db.py  compare_json_db.py  compare_unified_vs_direct.py  data_health_report.py  precommit_pytest_coverage.py  prefetch_all.py  prefetch_collection.py  run_baselines.sh  run_direct_collection.py  run_direct_sample.py
shared_lib/: README.md  pyproject.toml
shared_lib/src/shared_lib/contracts/: __init__.py  _base.py  approvals.py  audit.py  factors.py  market_data.py  memory.py  optimization.py  orders.py  predictions.py  rl.py  runs.py  signals.py  status.py  validation.py
shared_lib/src/shared_lib/logging/: __init__.py
shared_lib/src/shared_lib/math_utils/: __init__.py
shared_lib/src/shared_lib/telemetry/: __init__.py
shared_lib/src/shared_lib/transport/: __init__.py
src/: config.py  main.py
tasks/: lessons.md  todo.md
tests/: conftest.py  test_all_csv_export.py  test_backtest_runner.py  test_cli_manifest.py  test_config.py  test_config_contract_param.py  test_dashboard_api.py  test_dashboard_reporter.py  test_evaluation_store.py  test_html_reporter.py  test_http_retry.py  test_http_utils.py  test_main_cli.py  test_manifest_refresh.py  test_metrics.py  test_notifications.py  test_parquet_cache.py  test_parquet_cache_basic.py  test_rate_limiter.py  test_reliability.py  test_results_cache.py  test_symbols.py  test_tradingview_exporter.py  test_yfinance_source.py
tools/: diagnose_cache.py
trading_system/: README.md  pyproject.toml
trading_system/native/: Cargo.toml
trading_system/native/hft_engine/core/: Cargo.toml
trading_system/native/hft_engine/core/src/: lib.rs
trading_system/native/hft_engine/fast_inference/: Cargo.toml
trading_system/native/hft_engine/fast_inference/src/: lib.rs
trading_system/native/hft_engine/fpga/: README.md
trading_system/native/hft_engine/network/: Cargo.toml
trading_system/native/hft_engine/network/src/: lib.rs
trading_system/src/trading_system/ems/: __init__.py
trading_system/src/trading_system/gateways/defi/: __init__.py
trading_system/src/trading_system/gateways/tradfi/: __init__.py
trading_system/src/trading_system/gateways/web3/: __init__.py
trading_system/src/trading_system/hard_kill/: __init__.py
trading_system/src/trading_system/hft_engine/: __init__.py  benchmark.py  model_card.py
trading_system/src/trading_system/kill_switch/: __init__.py
trading_system/src/trading_system/mid_freq_engine/execution_algos/: __init__.py
trading_system/src/trading_system/mid_freq_engine/model_serving/: __init__.py
trading_system/src/trading_system/mid_freq_engine/portfolio_optimizer/: __init__.py
trading_system/src/trading_system/oms/: __init__.py
trading_system/src/trading_system/rms/: __init__.py
trading_system/src/trading_system/shared_gateways/: __init__.py
trading_system/src/trading_system/shared_gateways/binary_protocols/: __init__.py
trading_system/src/trading_system/shared_gateways/fix_engine/: __init__.py
trading_system/src/trading_system/shared_gateways/replay/: __init__.py
(+268 files in other folders)
