[tool.poetry]
name = "quant-system"
version = "0.1.0"
description = "Dockerized, cache-aware, config-driven backtesting system using vectorbt"
authors = ["Louis Letcher <y36189959+LouisLetcher@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "1.24.4"
pandas = "2.0.3"
pyarrow = "17.0.0"
requests-cache = "1.2.1"
typer = "0.12.3"
PyYAML = "6.0.2"
pydantic = "2.8.2"
yfinance = "0.2.43"
ccxt = "4.5.4"
vectorbt = "0.24.5"
plotly = "<6.0.0"
tabulate = "0.9.0"
python-dotenv = "^1.0.1"
backtesting = "^0.3.3"
numba = "==0.57.1"
llvmlite = "==0.40.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"
pre-commit = "^3.8.0"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "B", "I", "UP"]
ignore = ["E203", "E266", "E501", "W503"]

[tool.ruff.isort]
known-first-party = ["src"]
profile = "black"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
