[tool.poetry]
name = "quant-system"
version = "0.1.0"
description = "Dockerized, cache-aware, config-driven backtesting system for systematic trading"
authors = ["Louis Letcher <y36189959+LouisLetcher@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
numpy = ">=2.3.3,<2.4"
pandas = "^2.2.0"
pyarrow = "^23.0.0"
requests-cache = "1.2.1"
typer = "0.12.3"
click = "8.1.7"
PyYAML = "6.0.2"
pydantic = "2.8.2"
yfinance = "^0.2.55"
ccxt = "4.4.15"
plotly = "<7.0.0"
tabulate = "0.9.0"
python-dotenv = "^1.0.1"
numba = "^0.63.1"
llvmlite = "^0.46.0"
lib-pybroker = "^1.2.10"
fastapi = "^0.128.7"
jinja2 = "^3.1.4"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
httpx = "^0.27.2"
optuna = "^3.6.1"
starlette = "^0.52.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"
pre-commit = "^3.8.0"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
