[project]
name = "alpha_research"
version = "0.0.0"
description = "alpha_research domain package (Phase 0 scaffold; no runtime code yet)."
readme = "README.md"
requires-python = ">=3.12,<3.14"
authors = [{ name = "Platform" }]
dependencies = []

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
