[project]
name = "shared_lib"
version = "0.0.0"
description = "Shared contracts, telemetry, and primitives used by every quant-system domain package."
readme = "README.md"
requires-python = ">=3.12,<3.14"
authors = [{ name = "Platform" }]
dependencies = []

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# Phase 0 scaffold manifest. Dependencies are intentionally empty; the Phase 1
# extraction will pin telemetry, pydantic, and polars here.
